# pybot

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: python-package.yml
apps/core/: apps.py  help.json  models.py  pybot.py
apps/core/cogs/: __init__.py  admin.py  student.py
apps/core/management/commands/: launch.py
apps/core/migrations/: 0001_initial.py  0002_server_points_to_give_student_points.py  0003_student_last_participation.py  0004_alter_student_discord_id.py
apps/core/tests/unit/: test_admin_cog.py  tests_admin_cog.py  tests_commands.py  tests_models.py  tests_pybot.py  tests_student_cog.py
config/: __init__.py  app_settings.py  asgi.py  settings.py  urls.py  wsgi.py
